# R-TIE

./: .env.example  .gitignore  README.md  cli.py  debug_test.py  docker-compose.yml  pyproject.toml  run.py  validate_phase2.py
config/: settings.dev.yaml  settings.prod.yaml  settings.staging.yaml  settings.yaml
db/memory/: create_memory_tables.sql
docs/: ARCHITECTURE_OVERVIEW.md  architecture-overview.mmd  architecture.html  complete-architecture.mmd  graph-parsing-pipeline.mmd  langgraph-pipeline.mmd  query-engine-pipeline.mmd  request-pipeline.mmd  variable-tracer.mmd  w34_pipeline_map.md  w34_timing_results.md  w35_architecture.md  w35_diagnostic.md  w35_phase05_diagnostic.md  w35_phase2_summary.md  w35_phase3_summary.md  w35_phase4_summary.md  w43_findings.md  w43_graph_key_inventory.md  w43_phase1_retrieval_path.md  w45_experiment_report.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
scratch/: w34_canary_results.json  w34_canary_runner.py  w34a_canary_results.json
scripts/: extract_t2t.py  extract_type3_sql.py  wrap_ofsaa_tasks.py
src/: __init__.py  llm_errors.py  llm_factory.py  logger.py  main.py
src/agents/: __init__.py  ambiguity.py  cache_manager.py  data_query.py  indexer.py  logic_explainer.py  metadata_interpreter.py  orchestrator.py  renderer.py  validator.py  value_tracer.py  variable_tracer.py
src/graph/: logic_graph.py  state.py
src/middleware/: __init__.py  correlation_id.py  retry.py
src/monitoring/: __init__.py  health.py
src/parsing/: builder.py  derivations.py  (+10 more)
(+488 files in other folders)
